# DiffusionArcade

./: .env  .gitignore  README.md  config.yaml  diffusion.py  info.out  pyproject.toml  qlearn_pong.py  requirements.txt  run_training.py  setup_env.sh  setup_ple_env.sh  setup_ple_env_mac.sh  submit_job.sh
PPO_ALE/: constants.py  ppo_torch.py  reward_wrapper.py
PPO_ALE/videos/: test-video-episode-10000.meta.json  test-video-episode-10400.meta.json  test-video-episode-10800.meta.json  test-video-episode-11200.meta.json  test-video-episode-11600.meta.json  test-video-episode-1200.meta.json  test-video-episode-12000.meta.json  test-video-episode-12400.meta.json  test-video-episode-12800.meta.json  test-video-episode-13200.meta.json  test-video-episode-13600.meta.json  (+39 more)
PPO_PLE/: ppo_model.py  run_ppo.py
PPO_torch/: constants.py  policy_network.py  ppo_torch.py  reward_wrapper.py
arcadeLE/: constants.py  exploring_environments.py  info.out  policy_network.py  reward_wrapper.py  testing_expanded_info.py
diffusion_app/: app.py  app_config.yaml  config.yaml  minimal_app.py
diffusion_notebooks/: diffusion_model.ipynb
logs/: pong_states_2025‑05‑07_15‑30‑14.csv  pong_states_2025‑05‑07_15‑31‑34.csv  pong_states_2025‑05‑07_15‑45‑14.csv  pong_states_2025‑05‑08_15‑32‑13.csv  pong_states_2025‑05‑08_15‑33‑29.csv
notebooks/: diffusion_model.ipynb  diffusion_model_test.ipynb
screens/: 2025-05-13_16-38-08.csv
scripts/: config.py  deepqlearn_pong.py  dqn.py  eval_agent.py  eval_dqn_pong.py  pong.py  qlearn_pong.py  qlearn_pong_2.py
src/: utils.py
src/diffusion/: model.py  (+4 more)
(+50 files in other folders)
