[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "diffusion_arcade"
version = "0.1.0"
description = "A project that combines diffusion models with reinforcement learning for Pong game generation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "diffusers",
    "datasets",
    "transformers",
    "accelerate",
    "ftfy",
    "numpy",
    "pyarrow",
    "ipywidgets",
    "matplotlib",
    "torchvision",
    "jupyter",
    "ipykernel",
    "python-dotenv",
    "wandb",
    "pillow",
    "pygame",
    "ipympl",
    "imageio[ffmpeg]",
    "imageio-ffmpeg"
]

[tool.wheel]
exclude = ["assets*", "notebooks*"]
